--- a/pages/swiper-picture/swiper-picture.wxml
+++ b/pages/swiper-picture/swiper-picture.wxml
@@ -8,7 +8,7 @@
           <input placeholder="搜索话题, 问题或人" placeholder-class="search-placeholder"/>
       </view>
       <view class="search-right flex-item" bindtap="chooseTap" style="margin:0 0 0 10rpx;background:white">
-          <image src="../../icon/map.png"></image>
+          <image src="https://ae01.alicdn.com/kf/H7af1436fe01540e591d540c26049a5aew.png"></image>
       </view>
   </view>
 
@@ -16,16 +16,16 @@
   <!-- 轮播图 -->
   <swiper autoplay circular indicator-dots>
     <swiper-item bindtap="goToDe">
-      <image src="/../../icon/zhao.jpg" mode="widthFix"></image>
+      <image src="https://ae01.alicdn.com/kf/H4cc3c4fdf15e4f21ab6a837ae16b1553X.jpg" mode="widthFix"></image>
     </swiper-item>
     <swiper-item>
-      <image src="/../../icon/zhao.jpg" mode="widthFix"></image>
+      <image src="https://ae01.alicdn.com/kf/Hf8ac8111da974536ae25073f24a43d52A.jpg" mode="widthFix"></image>
     </swiper-item>
     <swiper-item>
-      <image src="/../../icon/zhao.jpg" mode="widthFix"></image>
+      <image src="https://ae01.alicdn.com/kf/H4cc3c4fdf15e4f21ab6a837ae16b1553X.jpg" mode="widthFix"></image>
     </swiper-item>
     <swiper-item>
-      <image src="/../../icon/zhao.jpg" mode="widthFix"></image>
+      <image src="https://ae01.alicdn.com/kf/Hf8ac8111da974536ae25073f24a43d52A.jpg" mode="widthFix"></image>
     </swiper-item>
   </swiper>
   <!-- 导航菜单 -->
@@ -36,19 +36,7 @@
     </view>
   </view>
 </view>
-<!-- 人员列表 -->
-<!-- <van-panel title="猜你喜欢" desc="" status="">
-  <view class="product">
-    <view class="product_detail" wx:for="{{productDatabase}}" wx:key="{{index}}">
-      <image src="{{item.src}}" mode="widthFix"></image>
-      <view class="info">
-        <text>{{item.name}}</text>
-        <text class="price">{{item.price}}</text>
-      </view>
-    </view>
-  </view>
-</van-panel> -->
-
+<!-- 猜你喜欢和金牌护工 -->
 <van-tabs active="a">
   <van-tab title="猜你喜欢" name="a">
     <view class="product">
