--- a/pages/detail/detail.wxss
+++ b/pages/detail/detail.wxss
@@ -1,109 +1,26 @@
 page {
+  background-color: #f2f2f2;
+}
+
+.container {
   display: flex;
+  width: 100%;
   flex-direction: column;
-  height: 100%;
+  padding: 20rpx 30rpx;
+  margin: 0 0 20rpx 0;
+  background-color: white;
 }
-/* 直接设置swiper属性 */
-swiper {
-  height: 500rpx;
-}
-swiper-item image {
+
+.container swiper {
   width: 100%;
-  height: 100%;
+  height: 410rpx;
 }
-.detail {
-  display: flex;
-  flex-direction: column;
-  margin-top: 15rpx;
-  margin-bottom: 0rpx;
-}
-.detail .title {
-  font-size: 40rpx;
-  margin: 10rpx;
-  color: black;
-  text-align: justify;
-}
-.detail .price {
-  color: red;
-  font-size: 40rpx;
-  margin: 10rpx;
-}
-.line_flag {
-  width: 80rpx;
-  height: 1rpx;
-  display: inline-block;
-  margin: 20rpx auto;
-  background-color: gainsboro;
-  text-align: center;
-}
-.line {
-  width: 100%;
-  height: 2rpx;
-  display: inline-block;
-  margin: 20rpx 0rpx;
-  background-color: gainsboro;
-  text-align: center;
-}
-.detail-nav {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  float: left;
-  background-color: #fff;
-  position: fixed;
-  bottom: 0;
-  right: 0;
-  z-index: 1;
-  width: 100%;
-  height: 100rpx;
-}
-.button-green {
-  border-bottom-left-radius: 50rpx;
-  border-top-left-radius: 50rpx;
-  background-color: #02c9ef; 
-}
-.button-red {
-  border-bottom-right-radius: 50rpx;
-  border-top-right-radius: 50rpx;
-  background-color:orange; 
-}
-.image_detail {
+
+.container swiper-item {
   width: 100%;
 }
-button {
-  color: white;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 30rpx;
-  border-radius: 0rpx;
-  width: 50%;
-  height: 100%;
-  line-height: 80rpx;
-}
-.detail-nav image {
-  width: 70rpx;
-  height: 50rpx;
-  margin: 20rpx 40rpx;
-}
-.line_nav {
-  width: 5rpx;
-  height: 100%;
-  background-color: gainsboro;
-}
-/* 占位 */
-.temp {
-  height: 100rpx;
-}
-text {
-  display: block;
-  height: 60rpx;
-  line-height: 60rpx;
-  font-size: 30rpx;
-  margin: 10rpx;
-}
-.text-remark {
-  display: block;
-  font-size: 25rpx;
-  margin: 10rpx;
+
+swiper image {
+  width: 100%;
+  border-radius: 16rpx;
 }
