--- a/pages/detail/detail.wxss
+++ b/pages/detail/detail.wxss
@@ -24,3 +24,62 @@ swiper image {
   width: 100%;
   border-radius: 16rpx;
 }
+.introduce{
+  background-color: white;
+  width: 100%;
+  padding: 0 30rpx;
+}
+
+.introduce .title{
+  font-weight: bold;
+  font-family: sans-serif;
+  font-size: 36rpx;
+  padding-bottom: 16rpx;
+}
+
+.schedule .title{
+  font-weight: bold;
+  font-family: sans-serif;
+  font-size: 36rpx;
+  padding-bottom: 16rpx;
+}
+.schedule{
+  margin-top: 16rpx;
+  background-color: white;
+  width: 100%;
+  padding: 0 30rpx;
+  line-height: 1.5
+}
+
+.picker{
+  font-family: sans-serif;
+  /* font-weight: bold; */
+}
+.footer{
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100rpx;
+  
+}
+
+button {
+  display: inline-block !important;
+  /* padding: 10rpx 0; */
+  
+}
+
+.threeBtn{
+  background-color: white;
+  margin: 0;
+  padding: 10rpx;
+}
+.threeBtn button {
+  border: 1px solid #999;
+  border-radius: 20rpx;
+  width: 30%;
+  margin-left: 101rpx;
+  font-size: 28rpx;
+  margin-top: 2rpx;
+}
