--- a/pages/swiper-picture/swiper-picture.wxss
+++ b/pages/swiper-picture/swiper-picture.wxss
@@ -9,7 +9,7 @@ page {
   display: flex;
   width: 100%;
   flex-direction: column;
-  padding: 20rpx 30rpx;
+  padding: 10rpx 30rpx;
   margin: 0 0 20rpx 0;
   background-color: white;
 }
@@ -28,6 +28,21 @@ swiper image {
   border-radius: 16rpx;
 }
 
+.gradeContainer{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  width: 100%;
+  padding: 10rpx 0 0 0;
+}
+.grade{
+  display: flex;
+  width: 25%;
+}
+.grade image{
+  width: 100%;
+}
 .nav {
   display: flex;
   flex-wrap: wrap;
@@ -55,7 +70,6 @@ swiper image {
   height: 120rpx;
   width: 120rpx;
   margin-top: 10rpx;
-  /* border-radius: 50%; */
 }
 
 .product {
@@ -70,7 +84,7 @@ swiper image {
 .product_detail {
   display: flex;
   flex-direction: column;
-  width: 46%;
+  width: 45%;
   /* margin-bottom: 16rpx;
   /* margin-left: 10rpx; */
   margin: 10rpx 16rpx;
