--- a/pages/order/order.wxss
+++ b/pages/order/order.wxss
@@ -1,4 +1,5 @@
 /* pages/order/order.wxss */
+
 page {
   background-color: #f2f2f2;
 }
@@ -6,6 +7,8 @@ page {
 .marginCon {
   background-color: white;
   padding: 0 30rpx;
+  margin: 0 0 20rpx 0;
+
 }
 
 .title {
@@ -13,7 +16,6 @@ page {
   padding-top: 18rpx;
   width: 100%;
   height: 70rpx;
-
 }
 
 .titleLeft {
@@ -37,10 +39,12 @@ page {
   background-color: #999;
   border-radius: 20rpx;
 }
-.imgCon image{
+
+.imgCon image {
   height: 100%;
   width: 100%;
 }
+
 .priceAndTime {
   position: absolute;
   bottom: 0;
@@ -77,12 +81,11 @@ page {
   display: flex;
   width: 80%;
   height: 106rpx;
-  /* background-color: blueviolet; */
 }
 
 button {
   margin-left: 20rpx;
-  padding: 10rpx 0;
+  padding: 19rpx 0;
 }
 
 .threeBtn button {
@@ -90,11 +93,11 @@ button {
   border-radius: 20rpx;
   width: 30%;
   height: 60rpx;
-  font-weight: 100;
+  font-weight: 300;
   font-size: 25rpx;
   margin-top: 20rpx;
 }
 
-.vant-tab{
+.vant-tab {
   border: 1px #02cde9 solid !important;
 }
