--- a/pages/swiper-picture/product-list/product-list.wxss
+++ b/pages/swiper-picture/product-list/product-list.wxss
@@ -67,20 +67,21 @@ swiper image {
 
 button {
   display: inline-block !important;
-  /* padding: 10rpx 0; */
   
 }
 
 .threeBtn{
   background-color: white;
-  margin: 0;
-  padding: 10rpx;
+
+
 }
 .threeBtn button {
   border: 1px solid #999;
   border-radius: 20rpx;
   width: 30%;
   margin-left: 101rpx;
-  font-size: 28rpx;
-  margin-top: 2rpx;
+  font-size: 29rpx;
+  margin-top: 16rpx;
+  height: 1rpx;
+
 }
